<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="termux_background"
        app:title="@string/termux_background_header">

        <SwitchPreferenceCompat
            app:key="background_image_enabled"
            app:summaryOff="@string/termux_background_image_enabled_off"
            app:summaryOn="@string/termux_background_image_enabled_on"
            app:title="@string/termux_background_image_enabled_title" />

        <SwitchPreferenceCompat
            app:key="use_system_wallpaper"
            app:title="@string/termux_use_system_wallpaper_title"
            app:summaryOn="@string/termux_use_system_wallpaper_on"
            app:summaryOff="@string/termux_use_system_wallpaper_off" />

        <SwitchPreferenceCompat
            app:key="monet_background_enabled"
            app:summaryOff="@string/termux_monet_background_enabled_off"
            app:summaryOn="@string/termux_monet_background_enabled_on"
            app:title="@string/termux_monet_background_enabled_title" />

        <androidx.preference.SeekBarPreference
            app:key="terminal_background_opacity"
            app:title="@string/termux_terminal_background_opacity_title"
            app:summary="@string/termux_terminal_background_opacity_summary"
            android:min="0"
            android:max="100"
            android:defaultValue="100"
            app:showSeekBarValue="true" />

        <androidx.preference.SeekBarPreference
            app:key="terminal_blur_radius"
            app:title="@string/termux_terminal_blur_radius_title"
            app:summary="@string/termux_terminal_blur_radius_summary"
            android:min="0"
            android:max="30"
            android:defaultValue="0"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            app:key="extrakeys_blur_enabled"
            app:summaryOff="@string/termux_extrakeys_blur_enabled_off"
            app:summaryOn="@string/termux_extrakeys_blur_enabled_on"
            app:title="@string/termux_extrakeys_blur_enabled_title" />

        <androidx.preference.SeekBarPreference
            app:key="extrakeys_blur_radius"
            app:title="@string/termux_extrakeys_blur_radius_title"
            app:summary="@string/termux_extrakeys_blur_radius_summary"
            android:min="0"
            android:max="30"
            android:defaultValue="10"
            app:showSeekBarValue="true" />

        <androidx.preference.SeekBarPreference
            app:key="app_bar_opacity"
            app:title="@string/termux_app_bar_opacity_title"
            app:summary="@string/termux_app_bar_opacity_summary"
            android:min="0"
            android:max="100"
            android:defaultValue="50"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            app:key="sessions_blur_enabled"
            app:summaryOff="@string/termux_sessions_blur_enabled_off"
            app:summaryOn="@string/termux_sessions_blur_enabled_on"
            app:title="@string/termux_sessions_blur_enabled_title" />

        <androidx.preference.SeekBarPreference
            app:key="sessions_blur_radius"
            app:title="@string/termux_sessions_blur_radius_title"
            app:summary="@string/termux_sessions_blur_radius_summary"
            android:min="0"
            android:max="30"
            android:defaultValue="10"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
